optimization regex code